# XHX-Agent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  REFACTOR_PLAN.md  ROADMAP.md  XHX.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-overview.md  01-architecture.md  02-version-roadmap.md  03-trailgraph.md  04-tools-and-safety.md  05-skills-and-extensions.md  06-testing-and-evaluation.md  07-reference-agents.md  08-context-pack-compiler.md  09-safe-execution-kernel.md  10-adaptive-planner.md  11-verification-router.md  12-development-plan.md  claude-code-learnings.md
docs/implementation/: 00-implementation-index.md  01-module-boundaries.md  04-version-breakdown.md  05-testing-fixtures.md  06-tui-command-console-spec.md  07-implementation-baseline.md  13-implementation-index.md  15-runtime-contracts.md  16-v0.1-implementation-spec.md  17-version-breakdown.md  18-testing-fixtures.md  20-implementation-baseline.md
docs/superpowers/: gemini-handoff-workflow.md
docs/superpowers/plans/: 2026-05-30-core-enhancements.md  2026-05-30-docs-implementation.md  2026-06-10-loop-tool-calling-phase1.md  2026-06-10-phase2a-tool-hardening.md  2026-06-10-phase2b-terminal-verify.md  2026-06-11-fix-apply-patch-real-model-formats.md  2026-06-11-phase2c-session-persistence.md  2026-06-11-phase3a-plan-tool-calling.md  2026-06-11-phase3b-1-plan-evidence-parity.md  2026-06-11-phase4a-graph-tool-calling.md  2026-06-11-phase5a-subagent-dispatch.md  2026-06-11-phase8a-benchmark-matrix.md  2026-06-11-phase8b-token-metering.md  2026-06-12-phase3b2-default-toolcalling.md  2026-06-12-phase5b-write-parallel-subagent.md  2026-06-12-phase6a-longterm-memory.md  2026-06-12-phase6b-memory-suggest-confirm.md  2026-06-12-phase7a-streaming-render.md  2026-06-12-phase7b-compaction-repointel-tool.md  2026-06-12-phase7c-textual-fullscreen.md  2026-06-12-phase9-multi-model-routing.md  2026-06-13-context-meter.md  2026-06-13-conversation-colors.md  2026-06-13-fullscreen-default-remove-rich-console.md  2026-06-13-per-step-metrics.md  2026-06-13-session-picker-v2.md  2026-06-13-session-restore-redesign.md  2026-06-13-step-tree.md  2026-06-13-thinking-display.md  2026-06-13-tool-call-details.md  2026-06-13-tui-single-pane-live-tokens.md  2026-06-14-graph-rebuild-p1-planner-dag.md  (+8 more)
scripts/: render_dashboard.py
src/xhx_agent/: __init__.py  agent.py  askuser_dialog.py  cache.py  client.py  config.py  conversation.py  permission_dialog.py  plan_dialog.py  prompts.py  serialization.py  teammate_tree.py
tests/: conftest.py  mcp_fake_server.py  test_agent_runner.py  test_agents.py  test_async_wrapper.py  test_auto_memory.py  test_bash_tool.py  test_benchmark_matrix.py  test_chat_client.py  test_cli.py  test_cli_more.py  test_client.py  test_client_unit.py  test_command_console.py  test_command_subcommands.py  test_commands.py  test_compaction.py  test_compaction_integration.py  test_compaction_unit.py  test_completion.py  test_config.py  test_config_profiles.py  test_console_answer.py  test_context_compiler.py  test_context_manager.py  test_context_window.py  test_coordinator_mode.py  test_cross_run_evidence.py  test_evals.py  test_evidence_store.py  test_file_tools.py  test_filehistory.py  test_graph_orchestrator.py  test_headless.py  test_hooks_engine_loader.py  test_hooks_unit.py  test_imports_resolve.py  test_loop_orchestrator.py  test_mailbox.py  test_mcp_config.py  (+68 more)
(+236 files in other folders)
