[project]
name = "xhx-agent"
version = "1.0.0"
description = "Context-budgeted local coding agent runtime."
readme = "README.md"
authors = [
    { name = "'Elysia'", email = "'11175449+jc2915448593@user.noreply.gitee.com'" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pyjsparser>=2.7.1",
    "rich>=15.0.0",
    "textual>=6.7.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.25.1",
    "tiktoken>=0.8.0",
    "prompt-toolkit>=3.0.36",
    "PyYAML>=6.0.1",
]

[project.scripts]
xhx = "xhx_agent.cli.main:app"
xhx-agent = "xhx_agent.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
norecursedirs = ["tests/fixtures", ".tmp"]
markers = [
    "live: opt-in end-to-end tests that call a real LLM endpoint (skipped unless configured)",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "SIM", "B", "C4"]
ignore = ["E501", "B904", "SIM105"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/xhx_agent"]

[tool.coverage.report]
show_missing = true

